@@ -1,3 +1,7 @@
+2009-12-16  Robby Stephenson  <robby@periapsis.org>
+
+	* Added themoviedb.org data source.
+
 2009-12-12  Robby Stephenson  <robby@periapsis.org>
 
 	* Improve updating from Amazon to include book title or album title in search.
